--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
+
+@font-face {
+  font-family: 'Livvic-Regular';
+  src: url('./Assets/Font/Livvic-Regular.ttf') format('truetype');
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Livvic-Regular';
 }
 
 code {
