--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
+@import url('./colors.css');
 .App {
   display: flex;
-  width: 100%;
+  width: 100vw;
+  height:100vh;
   flex-wrap: wrap;
-  
+  background-color: var(--background);
+  overflow-x: hidden;
+
 }
+
 
