--- a/src/Components/Biography.css
+++ b/src/Components/Biography.css
@@ -1,40 +1,68 @@
 .biography{
     width:100%;
-    font-size: 20px;
     display:flex;
     flex-direction: row;
     padding-left:20px;   
     flex-wrap:wrap;
     align-content: flex-start;
-    
+    text-align: start;
+    padding-bottom: 20px;
 }
 .profile-picture {
     width: 400px;
     height: 600px;
     overflow: hidden;
-    object-fit:fill;
+    box-shadow:5px 5px 7px black;
     border-radius: 20px;  
   }
   .profile-picture img {
     width: 100%;
     height: 100%;
+    object-fit:cover;
   }
+  .fade-in-out {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .fade-in-out.show {
+    opacity: 1;
+  }
+  
 .text {
   display:flex;
   flex-direction: column;
-  padding:none;
+  padding-right:20px;
   margin-left:20px;
-  text-align: start;
+  margin-right:20px;
+  text-align:start;
   flex: 1;  
+  color:var(--primary-color);
+  text-align: start;
+}
+.text h2{
+  font-size:35px;
+  text-align: start;
+}
+.text p{
+  font-size: 1rem;
+  text-align: justify;
 }
 .button-row button{
   width:200px;
   height:70px;
   margin-right:50px;
-  background-color: orange;
+  background-color: var(--background);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  border: none;
+  border: 1px solid var(--primary-color);
   font-family: inherit;
   font-size: large;
   font-weight: bolder;
+  color:var(--primary-color);
   }
+  .button-row button:hover{
+    box-shadow: 10px 10px 0px #433957; 
+    background-color: var(--secondary-color);
+    color:var(--background);
+    border:none;
+  } 
