--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,8 +1,9 @@
 .contact{
     width: 100%;
     height:500px;
-    background-color: yellow;
+    background-color: #D0D2FF;
     text-align: center;
+    margin-top:20px;
 }
 .contact-controls {
     display: flex;
