--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 
 @font-face {
-  font-family: 'Livvic-Regular';
-  src: url('./Assets/Font/Livvic-Regular.ttf') format('truetype');
+  font-family: 'Montserrat-Regular';
+  src: url('./Assets/Font/Montserrat-Regular.ttf') format('truetype');
 }
 body {
   margin: 0;
-  font-family: 'Livvic-Regular';
+  font-family: 'Montserrat-Regular';
 }
 
 code {
