--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,67 +1,91 @@
-.contact{
-    width: 100%;
-    flex:1;
-    background-color: var(--primary-color);
-    text-align: center;
-    margin-top:20px;
-    color:var(--background);
-    padding-bottom: 20px;
+.contact {
+  width: 80%;
+  display: flex;
+  background-color: var(--primary-color);
+  text-align: center;
+  margin-top: 20px;
+  color: var(--background);
+  padding-left: 30px;
+  border-radius: 20px;
+  margin-bottom:20px;
 }
 .contact-controls {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    text-align: left;
-   justify-content: center;
-   align-items: center;
-   
-  }
-  .fields{
-    display: block;
-    width:40%;
-  }
-  .fields label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    display: block;
-  }
-  
-  .fields input {
-    font-family: inherit; 
-    padding: 10px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 100%;
-    max-width: 100%;
-    background-color: var(--secondary-color);
-  }
-  .fields textarea {
-    resize:none;
-  }
-  .messagefield {
-    font-family: inherit; 
-    padding: 10px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 100%;
-    max-width: 100%;
-    background-color: var(--secondary-color);
-    max-lines: 5;
-    height:120px;
-    overflow-wrap: break-word;
-  }
-  .submit-button button{
-    width:200px;
-    height:70px;
-    margin-right:50px;
-    background-color: var(--background);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    border: 1px solid var(--primary-color);
-    font-family: inherit;
-    font-size: large;
-    font-weight: bolder;
-    color:var(--primary-color);
-    border-radius: 20px;
-    }
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 80%;
+  margin-bottom: 1rem;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+}
+.fields {
+  display: block;
+  width: 100%;
+}
+.fields label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+
+.fields input {
+  font-family: inherit;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  width: 100%;
+  max-width: 100%;
+  height:30px;
+  background-color: var(--secondary-color);
+}
+.fields textarea {
+  resize: none;
+}
+.messagefield {
+  font-family: inherit;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  width: 100%;
+  max-width: 100%;
+  background-color: var(--secondary-color);
+  max-lines: 5;
+  height: 120px;
+  overflow-wrap: break-word;
+}
+.submit-button button {
+  width: 200px;
+  height: 70px;
+  margin-right: 50px;
+  background-color: var(--background);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  border: 1px solid var(--primary-color);
+  font-family: inherit;
+  font-size: large;
+  font-weight: bolder;
+  color: var(--primary-color);
+  border-radius: 20px;
+  margin-bottom:10px;
+}
+.contact-methods {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--secondary-color);
+  gap:2rem;
+  border-radius: 20px;
+}
+.left {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.contact-image {
+  width: 50%;
+  height: 50%;
+  object-fit: fill;
+}
