--- a/src/Screens/NavBar.css
+++ b/src/Screens/NavBar.css
@@ -15,7 +15,7 @@
   height:100%;
   object-fit:cover;
 }
-ul {
+.nav-bar-item ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -23,7 +23,7 @@ ul {
     
   }
   
-li {
+  .nav-bar-item li {
     display: inline-block;
     margin-right: 15px;
     font-size: larger;
@@ -31,11 +31,15 @@ li {
     color:white;  
   }
 
-li:hover{
+  .nav-bar-item li:hover{
     text-decoration: underline;
     font-size:23px;
 }
-li a {
+.nav-bar-item li a {
   color: var(--primary-color);
   text-decoration: none; /* Remove underline on links */
 }
+/* .nav-bar-item li:active {
+  text-decoration: underline;
+  font-size:23px;
+} */
