--- a/src/Components/ProjectTimeline.css
+++ b/src/Components/ProjectTimeline.css
@@ -13,6 +13,7 @@
 }
 .photo-comp{
     width:100%;
+    max-height: 400px;
     height:20%;
     overflow: hidden;
     border-radius: 10px;  
@@ -20,7 +21,7 @@
     margin-top:10px;
 }
 .photo-comp img{
-    object-fit: cover;
+    object-fit:cover;
     width:100%;
     height:100%;
 }
